src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_timestamp__cast_date_to_mz_timestamp.snap
---
source: src/expr/src/scalar/func/impls/mz_timestamp.rs
expression: "#[sqlfunc(\n    sqlname = \"date_to_mz_timestamp\",\n    preserves_uniqueness = true,\n    is_monotone = true\n)]\nfn cast_date_to_mz_timestamp(a: Date) -> Result<Timestamp, EvalError> {\n    let ts = CheckedTimestamp::try_from(\n        NaiveDate::from(a).and_hms_opt(0, 0, 0).unwrap(),\n    )?;\n    ts.and_utc()\n        .timestamp_millis()\n        .try_into()\n        .map_err(|_| EvalError::MzTimestampOutOfRange(a.to_string().into()))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastDateToMzTimestamp;
impl crate::func::EagerUnaryFunc for CastDateToMzTimestamp {
    type Input<'a> = Date;
    type Output<'a> = Result<Timestamp, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_date_to_mz_timestamp(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastDateToMzTimestamp {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("date_to_mz_timestamp")
    }
}
fn cast_date_to_mz_timestamp(a: Date) -> Result<Timestamp, EvalError> {
    let ts = CheckedTimestamp::try_from(
        NaiveDate::from(a).and_hms_opt(0, 0, 0).unwrap(),
    )?;
    ts.and_utc()
        .timestamp_millis()
        .try_into()
        .map_err(|_| EvalError::MzTimestampOutOfRange(a.to_string().into()))
}
