src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_timestamp__cast_mz_timestamp_to_timestamp.snap
---
source: src/expr/src/scalar/func/impls/mz_timestamp.rs
expression: "#[sqlfunc(\n    sqlname = \"mz_timestamp_to_timestamp\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastTimestampToMzTimestamp)\n)]\nfn cast_mz_timestamp_to_timestamp(\n    a: Timestamp,\n) -> Result<CheckedTimestamp<NaiveDateTime>, EvalError> {\n    let ms: i64 = a.try_into().map_err(|_| EvalError::TimestampOutOfRange)?;\n    let ct = DateTime::from_timestamp_millis(ms)\n        .and_then(|dt| {\n            let ct: Option<CheckedTimestamp<NaiveDateTime>> = dt\n                .naive_utc()\n                .try_into()\n                .ok();\n            ct\n        });\n    ct.ok_or(EvalError::TimestampOutOfRange)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastMzTimestampToTimestamp;
impl crate::func::EagerUnaryFunc for CastMzTimestampToTimestamp {
    type Input<'a> = Timestamp;
    type Output<'a> = Result<CheckedTimestamp<NaiveDateTime>, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_mz_timestamp_to_timestamp(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastTimestampToMzTimestamp)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastMzTimestampToTimestamp {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("mz_timestamp_to_timestamp")
    }
}
fn cast_mz_timestamp_to_timestamp(
    a: Timestamp,
) -> Result<CheckedTimestamp<NaiveDateTime>, EvalError> {
    let ms: i64 = a.try_into().map_err(|_| EvalError::TimestampOutOfRange)?;
    let ct = DateTime::from_timestamp_millis(ms)
        .and_then(|dt| {
            let ct: Option<CheckedTimestamp<NaiveDateTime>> = dt
                .naive_utc()
                .try_into()
                .ok();
            ct
        });
    ct.ok_or(EvalError::TimestampOutOfRange)
}
